--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -5,8 +5,18 @@ on:
       - main
 
 jobs:
-  greeting:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-lastest
     steps:
-      - name: Say hello
-        run: echo 'Hello from the pipeline!'
+      - name: Checkout and clone repo
+        uses: actions/checkout@v2
+      - name: Setup Postgres
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql db: test_db
+          postgresql user: test_user
+          postgresql password: test_password
+      - name: Install dependencies
+        run: npm install
+      - name: Test everything
+        run: PGDATABASE=test_db PGUSER=test_user PGPASSWORD=test_password npm test
